<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="@color/background"
    tools:context=".JupiterActivity"
    >

    <LinearLayout
        android:id="@+id/planets_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.01">

        <ImageButton
            android:id="@+id/earth_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/earth"
            android:contentDescription="@string/earth"
            android:onClick="clickedPlanetBtn"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="9dp"/>

        <ImageButton
            android:id="@+id/mercury_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/mercury"
            android:contentDescription="@string/mercury"
            android:onClick="clickedPlanetBtn"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="9dp" />

        <ImageButton
            android:id="@+id/venus_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/venus"
            android:contentDescription="@string/venus"
            android:onClick="clickedPlanetBtn"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="9dp" />

        <ImageButton
            android:id="@+id/mars_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/mars"
            android:contentDescription="@string/mars"
            android:onClick="clickedPlanetBtn"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="9dp" />

        <ImageButton
            android:id="@+id/jupiter_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/jupiter"
            android:contentDescription="@string/jupiter"
            android:onClick="clickedPlanetBtn"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="9dp" />

        <ImageButton
            android:id="@+id/saturn_btn"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:background="@drawable/saturn"
            android:contentDescription="@string/saturn"
            android:onClick="clickedPlanetBtn"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="9dp" />

        <ImageButton
            android:id="@+id/uranus_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/uranus"
            android:contentDescription="@string/uranus"
            android:onClick="clickedPlanetBtn"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="9dp" />

        <ImageButton
            android:id="@+id/neptune_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/neptune"
            android:contentDescription="@string/neptune"
            android:onClick="clickedPlanetBtn"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="9dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/jupiter"
        android:contentDescription="@string/jupiter"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planets_name" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/you_here"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintBottom_toTopOf="@id/tableLayout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="87dp"
        android:text="@string/jupiter"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/planets_name" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"

        android:layout_marginEnd="23dp"
        android:layout_marginBottom="334dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:paddingStart="10dp"
                android:paddingEnd="15dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_length"
                android:paddingStart="10dp"
                android:paddingEnd="15dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/year_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="15dp"
                android:text="@string/flight_time"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/flight_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>
    </TableLayout>

    <LinearLayout
        android:id="@+id/weightLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_on_planet"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="469dp" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/satellites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/jupiter_satellites"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightLayout" />

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/satellites"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/io"
                android:contentDescription="@string/io"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/io"
                android:textSize="15sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/io_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/europa"
                android:contentDescription="@string/europa"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/europa"
                android:textSize="15sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/europa_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>
        </LinearLayout>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>