<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background"

    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/earth"
        android:contentDescription="@string/earth"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="288dp"
        android:layout_marginBottom="9dp"
        android:text="@string/you_here"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/enter_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/weight_calculation_app"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <EditText
        android:id="@+id/enter_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=" "
        android:inputType="numberDecimal"
        android:hint="@string/enter_weight"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/planets_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="LabelFor" />

    <TableLayout
        android:id="@+id/planets_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/enter_weight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <LinearLayout
            android:id="@+id/mercury_layout"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_weight">

            <ImageButton
                android:id="@+id/mercury_btn"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@drawable/mercury"
                android:contentDescription="@string/mercury"
                android:onClick="clickedPlanetBtn"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="275dp"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mercury"
                android:layout_marginStart="50dp"
                android:textSize="25sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/venus_layout"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mercury_layout">

            <ImageButton
                android:id="@+id/venus_btn"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/venus"
                android:onClick="clickedPlanetBtn"
                android:contentDescription="@string/venus"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="275dp"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/venus"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mars_layout"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/venus_layout">

            <ImageButton
                android:id="@+id/mars_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/mars"
                android:onClick="clickedPlanetBtn"
                android:contentDescription="@string/mars"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="275dp"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/mars"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/jupiter_layout"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mars_layout">

            <ImageButton
                android:id="@+id/jupiter_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/jupiter"
                android:onClick="clickedPlanetBtn"
                android:contentDescription="@string/jupiter"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="275dp"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/jupiter"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/saturn_layout"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jupiter_layout">

            <ImageButton
                android:id="@+id/saturn_btn"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:background="@drawable/saturn"
                android:onClick="clickedPlanetBtn"
                android:contentDescription="@string/saturn"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="275dp"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/saturn"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/uranus_layout"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/saturn_layout">

            <ImageButton
                android:id="@+id/uranus_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/uranus"
                android:onClick="clickedPlanetBtn"
                android:contentDescription="@string/uranus"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="275dp"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/uranus"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/neptune_layout"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uranus_layout">

            <ImageButton
                android:id="@+id/neptune_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/neptune"
                android:onClick="clickedPlanetBtn"
                android:contentDescription="@string/neptune"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="275dp"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/neptune"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>